--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
 
   <footer>
     <div class="wrap">
-      <div><b>Cor padrão:</b> <code>#0786b4</code> · <b>Publicação:</b> GitHub Pages</div>
-      <div style="margin-top:6px;">Se algum link quebrar, ajuste o prefixo de pasta (ex.: <code>docs/</code> e <code>assets/img/</code>) para refletir sua organização.</div>
+      <div><b>Publicação:</b> GitHub Pages</div>
+      <div style="margin-top:6px;"> <a href="https://github.com/m4rc3lo"><code>by m4rc3lo</code> </a></div>
     </div>
   </footer>
 </body>
